Directories moved into common vars module

--- a/EBC_Spectra_Analysis.ipynb
+++ b/EBC_Spectra_Analysis.ipynb
@@ -70,7 +70,7 @@
    "outputs": [],
    "source": [
     "# Directorio padre\n",
-    "from spectral_analysis.preprocess.common_vars import DATA_FOLDER\n",
+    "from common_vars.directories import DATA_FOLDER\n",
     "# Directorio de los datos geográficos\n",
     "prnt_map = '{}/by_region'.format(DATA_FOLDER)"
    ]
