--- a/Get_ECCO_LLC_Data.ipynb
+++ b/Get_ECCO_LLC_Data.ipynb
@@ -53,7 +53,7 @@
    },
    "outputs": [],
    "source": [
-    "from spectral_analysis.preprocess.common_vars import MODEL_FOLDER,DATA_FOLDER\n",
+    "from common_vars.directories import MODEL_FOLDER,DATA_FOLDER\n",
     "prnt = '{}/LLC2160'.format(MODEL_FOLDER)"
    ]
   },
