--- a/OSM Poster.ipynb
+++ b/OSM Poster.ipynb
@@ -22,8 +22,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T05:23:52.729361Z",
-     "start_time": "2020-05-04T05:23:52.724806Z"
+     "end_time": "2020-05-04T07:25:19.969748Z",
+     "start_time": "2020-05-04T07:25:19.965151Z"
     },
     "init_cell": true
    },
@@ -39,8 +39,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T05:23:52.971809Z",
-     "start_time": "2020-05-04T05:23:52.732830Z"
+     "end_time": "2020-05-04T07:25:20.211650Z",
+     "start_time": "2020-05-04T07:25:19.973065Z"
     },
     "init_cell": true
    },
@@ -135,11 +135,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T07:27:52.366632Z",
-     "start_time": "2020-04-27T07:27:38.098393Z"
+     "end_time": "2020-05-04T07:25:36.662502Z",
+     "start_time": "2020-05-04T07:25:35.862861Z"
     }
    },
    "outputs": [],
@@ -153,7 +153,7 @@
     "from spectral_analysis.tools.spectral_analysis_tools import plot_wk_forseasonvarid as plot_wk\n",
     "\n",
     "# Directorio padre\n",
-    "from spectral_analysis.preprocess.common_vars import DATA_FOLDER\n",
+    "from common_vars.directories import DATA_FOLDER\n",
     "# Directorio de los datos geográficos\n",
     "prnt_map = '{}/by_region'.format(DATA_FOLDER)"
    ]
