--- a/Ocean_Spectra_map.ipynb
+++ b/Ocean_Spectra_map.ipynb
@@ -27,7 +27,7 @@
    },
    "outputs": [],
    "source": [
-    "from spectral_analysis.preprocess.common_vars import DATA_FOLDER\n",
+    "from common_vars.directories import DATA_FOLDER\n",
     "prnt = '{}/by_region'.format(DATA_FOLDER)\n",
     "#tools_fn = 'spectral_analysis_tools.py'\n",
     "#from shutil import copyfile\n",
