--- a/RMS Ro Timeseries.ipynb
+++ b/RMS Ro Timeseries.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T05:24:43.967992Z",
-     "start_time": "2020-05-04T05:24:43.963277Z"
+     "end_time": "2020-05-04T07:25:54.469084Z",
+     "start_time": "2020-05-04T07:25:54.464625Z"
     },
     "init_cell": true
    },
@@ -29,8 +29,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T05:24:44.753079Z",
-     "start_time": "2020-05-04T05:24:43.971221Z"
+     "end_time": "2020-05-04T07:25:55.255722Z",
+     "start_time": "2020-05-04T07:25:54.475783Z"
     },
     "init_cell": true
    },
@@ -49,28 +49,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T05:24:50.849089Z",
-     "start_time": "2020-05-04T05:24:44.755681Z"
+     "end_time": "2020-05-04T07:26:05.744810Z",
+     "start_time": "2020-05-04T07:26:04.640656Z"
     },
     "init_cell": true
    },
    "outputs": [],
    "source": [
-    "from spectral_analysis.preprocess.common_vars import OUT_IMGS_FOLDER,MODEL_FOLDER,LUIGI_OUT_FOLDER\n",
+    "from common_vars.directories import OUT_IMGS_FOLDER,MODEL_FOLDER,LUIGI_OUT_FOLDER\n",
     "from common_vars.time_slices import idx_t\n",
     "from common_vars.regions import ids_regions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T05:24:50.859461Z",
-     "start_time": "2020-05-04T05:24:50.853087Z"
+     "end_time": "2020-05-04T07:25:55.380218Z",
+     "start_time": "2020-05-04T07:25:54.422Z"
     },
     "init_cell": true
    },
@@ -85,11 +85,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T05:24:50.864305Z",
-     "start_time": "2020-05-04T05:24:50.861355Z"
+     "end_time": "2020-05-04T07:25:55.381283Z",
+     "start_time": "2020-05-04T07:25:54.426Z"
     },
     "code_folding": [],
     "init_cell": true
@@ -105,73 +105,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T05:24:51.463870Z",
-     "start_time": "2020-05-04T05:24:50.865801Z"
+     "end_time": "2020-05-04T07:25:55.382228Z",
+     "start_time": "2020-05-04T07:25:54.428Z"
     },
     "init_cell": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<xarray.Dataset>\n",
-       "Dimensions:  (face: 13, i: 2160, i_g: 2160, j: 2160, j_g: 2160, k: 90, k_l: 90, k_p1: 91, k_u: 90)\n",
-       "Coordinates:\n",
-       "  * i        (i) int64 0 1 2 3 4 5 6 7 ... 2153 2154 2155 2156 2157 2158 2159\n",
-       "  * i_g      (i_g) int64 0 1 2 3 4 5 6 7 ... 2153 2154 2155 2156 2157 2158 2159\n",
-       "  * j        (j) int64 0 1 2 3 4 5 6 7 ... 2153 2154 2155 2156 2157 2158 2159\n",
-       "  * j_g      (j_g) int64 0 1 2 3 4 5 6 7 ... 2153 2154 2155 2156 2157 2158 2159\n",
-       "  * k        (k) int64 0 1 2 3 4 5 6 7 8 9 10 ... 80 81 82 83 84 85 86 87 88 89\n",
-       "  * k_u      (k_u) int64 0 1 2 3 4 5 6 7 8 9 ... 80 81 82 83 84 85 86 87 88 89\n",
-       "  * k_l      (k_l) int64 0 1 2 3 4 5 6 7 8 9 ... 80 81 82 83 84 85 86 87 88 89\n",
-       "  * k_p1     (k_p1) int64 0 1 2 3 4 5 6 7 8 9 ... 81 82 83 84 85 86 87 88 89 90\n",
-       "  * face     (face) int64 0 1 2 3 4 5 6 7 8 9 10 11 12\n",
-       "    XC       (face, j, i) >f4 dask.array<chunksize=(1, 2160, 2160), meta=np.ndarray>\n",
-       "    YC       (face, j, i) >f4 dask.array<chunksize=(1, 2160, 2160), meta=np.ndarray>\n",
-       "    XG       (face, j_g, i_g) >f4 dask.array<chunksize=(1, 2160, 2160), meta=np.ndarray>\n",
-       "    YG       (face, j_g, i_g) >f4 dask.array<chunksize=(1, 2160, 2160), meta=np.ndarray>\n",
-       "    CS       (face, j, i) >f4 dask.array<chunksize=(1, 2160, 2160), meta=np.ndarray>\n",
-       "    SN       (face, j, i) >f4 dask.array<chunksize=(1, 2160, 2160), meta=np.ndarray>\n",
-       "    Z        (k) >f4 -0.5 -1.57 -2.79 -4.185 ... -5881.88 -6301.185 -6760.17\n",
-       "    Zp1      (k_p1) >f4 0.0 -1.0 -2.14 -3.44 ... -6082.07 -6520.3 -7000.04\n",
-       "    Zu       (k_u) >f4 -1.0 -2.14 -3.44 -4.93 ... -6082.07 -6520.3 -7000.04\n",
-       "    Zl       (k_l) >f4 0.0 -1.0 -2.14 -3.44 ... -5681.69 -6082.07 -6520.3\n",
-       "    rA       (face, j, i) >f4 dask.array<chunksize=(1, 2160, 2160), meta=np.ndarray>\n",
-       "    dxG      (face, j_g, i) >f4 dask.array<chunksize=(1, 2160, 2160), meta=np.ndarray>\n",
-       "    dyG      (face, j, i_g) >f4 dask.array<chunksize=(1, 2160, 2160), meta=np.ndarray>\n",
-       "    Depth    (face, j, i) >f4 dask.array<chunksize=(1, 2160, 2160), meta=np.ndarray>\n",
-       "    rAz      (face, j_g, i_g) >f4 dask.array<chunksize=(1, 2160, 2160), meta=np.ndarray>\n",
-       "    dxC      (face, j, i_g) >f4 dask.array<chunksize=(1, 2160, 2160), meta=np.ndarray>\n",
-       "    dyC      (face, j_g, i) >f4 dask.array<chunksize=(1, 2160, 2160), meta=np.ndarray>\n",
-       "    rAw      (face, j, i_g) >f4 dask.array<chunksize=(1, 2160, 2160), meta=np.ndarray>\n",
-       "    rAs      (face, j_g, i) >f4 dask.array<chunksize=(1, 2160, 2160), meta=np.ndarray>\n",
-       "    drC      (k_p1) >f4 0.5 1.07 1.22 1.395 ... 383.155 419.305 458.985 239.87\n",
-       "    drF      (k) >f4 1.0 1.14 1.3 1.49 1.7 ... 365.93 400.38 438.23 479.74\n",
-       "    PHrefC   (k) >f4 4.905 15.4017 27.3699 ... 57701.242 61814.625 66317.266\n",
-       "    PHrefF   (k_p1) >f4 0.0 9.81 20.9934 ... 59665.105 63964.145 68670.39\n",
-       "    hFacC    (k, face, j, i) >f4 dask.array<chunksize=(1, 1, 2160, 2160), meta=np.ndarray>\n",
-       "    hFacW    (k, face, j, i_g) >f4 dask.array<chunksize=(1, 1, 2160, 2160), meta=np.ndarray>\n",
-       "    hFacS    (k, face, j_g, i) >f4 dask.array<chunksize=(1, 1, 2160, 2160), meta=np.ndarray>\n",
-       "    maskC    (k, face, j, i) bool dask.array<chunksize=(1, 1, 2160, 2160), meta=np.ndarray>\n",
-       "    maskW    (k, face, j, i_g) bool dask.array<chunksize=(1, 1, 2160, 2160), meta=np.ndarray>\n",
-       "    maskS    (k, face, j_g, i) bool dask.array<chunksize=(1, 1, 2160, 2160), meta=np.ndarray>\n",
-       "Data variables:\n",
-       "    *empty*\n",
-       "Attributes:\n",
-       "    Conventions:  CF-1.6\n",
-       "    title:        netCDF wrapper of MITgcm MDS binary data\n",
-       "    source:       MITgcm\n",
-       "    history:      Created by calling `open_mdsdataset(extra_metadata=None, ll..."
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "grid_ds = open_mdsdataset(MODEL_FOLDER+'/LLC2160/grid/', read_grid=True, iters=None, default_dtype=np.float32, geometry='llc')\n",
     "grid_ds"
@@ -194,11 +136,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T05:24:51.469418Z",
-     "start_time": "2020-05-04T05:24:51.465287Z"
+     "end_time": "2020-05-04T07:25:55.383269Z",
+     "start_time": "2020-05-04T07:25:54.430Z"
     },
     "init_cell": true
    },
@@ -218,11 +160,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T05:24:51.475636Z",
-     "start_time": "2020-05-04T05:24:51.470955Z"
+     "end_time": "2020-05-04T07:25:55.384209Z",
+     "start_time": "2020-05-04T07:25:54.432Z"
     },
     "init_cell": true
    },
@@ -252,11 +194,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T05:24:51.480910Z",
-     "start_time": "2020-05-04T05:24:51.477001Z"
+     "end_time": "2020-05-04T07:25:55.385141Z",
+     "start_time": "2020-05-04T07:25:54.434Z"
     },
     "init_cell": true
    },
@@ -278,11 +220,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T05:24:51.485140Z",
-     "start_time": "2020-05-04T05:24:51.482296Z"
+     "end_time": "2020-05-04T07:25:55.386131Z",
+     "start_time": "2020-05-04T07:25:54.438Z"
     },
     "init_cell": true
    },
@@ -294,11 +236,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T05:24:51.492989Z",
-     "start_time": "2020-05-04T05:24:51.486593Z"
+     "end_time": "2020-05-04T07:25:55.387259Z",
+     "start_time": "2020-05-04T07:25:54.440Z"
     },
     "code_folding": [],
     "init_cell": true
@@ -329,11 +271,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T05:24:51.500301Z",
-     "start_time": "2020-05-04T05:24:51.496450Z"
+     "end_time": "2020-05-04T07:25:55.388334Z",
+     "start_time": "2020-05-04T07:25:54.443Z"
     },
     "init_cell": true
    },
@@ -354,11 +296,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T05:24:51.511526Z",
-     "start_time": "2020-05-04T05:24:51.502005Z"
+     "end_time": "2020-05-04T07:25:55.389517Z",
+     "start_time": "2020-05-04T07:25:54.445Z"
     },
     "code_folding": [],
     "init_cell": true
@@ -462,11 +404,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T05:24:51.516508Z",
-     "start_time": "2020-05-04T05:24:51.512885Z"
+     "end_time": "2020-05-04T07:25:55.390710Z",
+     "start_time": "2020-05-04T07:25:54.447Z"
     },
     "init_cell": true
    },
@@ -484,11 +426,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T05:24:51.531176Z",
-     "start_time": "2020-05-04T05:24:51.517901Z"
+     "end_time": "2020-05-04T07:25:55.391765Z",
+     "start_time": "2020-05-04T07:25:54.449Z"
     },
     "code_folding": [
      2
