--- a/Test - Ensenada U-V.ipynb
+++ b/Test - Ensenada U-V.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T04:43:00.640589Z",
-     "start_time": "2020-04-27T04:43:00.477687Z"
+     "end_time": "2020-05-04T07:26:38.252915Z",
+     "start_time": "2020-05-04T07:26:38.066519Z"
     }
    },
    "outputs": [],
@@ -20,13 +20,13 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T04:43:00.650410Z",
-     "start_time": "2020-04-27T04:43:00.642833Z"
+     "end_time": "2020-05-04T07:26:38.329617Z",
+     "start_time": "2020-05-04T07:26:38.322031Z"
     }
    },
    "outputs": [],
    "source": [
-    "from spectral_analysis.preprocess.common_vars import LUIGI_OUT_FOLDER\n",
+    "from common_vars.directories import LUIGI_OUT_FOLDER\n",
     "fname_fmt_ = LUIGI_OUT_FOLDER+\"/Datasets_compressed/0/days/{}0_{:05d}.npz\"\n",
     "fname_lon = LUIGI_OUT_FOLDER+\"/Datasets_compressed/0/days/lon.txt\"\n",
     "fname_lat = LUIGI_OUT_FOLDER+\"/Datasets_compressed/0/days/lat.txt\""
