Rotated U,V fields for face>6
See MITgcm/xmitgcm#204 and MITgcm/MITgcm#248

--- a/Get_ECCO_LLC_Data.ipynb
+++ b/Get_ECCO_LLC_Data.ipynb
@@ -38,11 +38,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-22T08:46:26.140040Z",
-     "start_time": "2020-05-22T08:46:23.854540Z"
+     "end_time": "2020-05-30T07:40:51.407007Z",
+     "start_time": "2020-05-30T07:40:51.042376Z"
     },
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -359,17 +359,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-22T08:46:31.878930Z",
-     "start_time": "2020-05-22T08:46:31.495560Z"
+     "end_time": "2020-05-30T07:40:43.891141Z",
+     "start_time": "2020-05-30T07:40:43.304475Z"
     },
     "colab": {},
     "colab_type": "code",
     "id": "_QBydCD8PM0b"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/antonio/.conda/envs/llc/lib/python3.6/site-packages/dask/config.py:168: YAMLLoadWarning: calling yaml.load() without Loader=... is deprecated, as the default Loader is unsafe. Please read https://msg.pyyaml.org/load for full details.\n",
+      "  data = yaml.load(f.read()) or {}\n",
+      "/home/antonio/.conda/envs/llc/lib/python3.6/site-packages/distributed/config.py:20: YAMLLoadWarning: calling yaml.load() without Loader=... is deprecated, as the default Loader is unsafe. Please read https://msg.pyyaml.org/load for full details.\n",
+      "  defaults = yaml.load(f)\n"
+     ]
+    }
+   ],
    "source": [
     "from xmitgcm import open_mdsdataset\n",
     "import numpy as np"
@@ -377,11 +388,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-22T08:46:48.799769Z",
-     "start_time": "2020-05-22T08:46:34.123439Z"
+     "end_time": "2020-05-30T07:41:25.048286Z",
+     "start_time": "2020-05-30T07:41:10.664547Z"
     },
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -392,6 +403,14 @@
     "outputId": "0498ba70-7bb8-4c91-da51-3614f07860ca"
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/antonio/.conda/envs/llc/lib/python3.6/site-packages/xmitgcm/mds_store.py:846: UserWarning: Couldn't find available_diagnostics.log in /home/antonio/GoogleDrive/Tesis/data/model/LLC4320/grid/ or /home/antonio/GoogleDrive/Tesis/data/model/LLC4320/grid/. Using default version.\n",
+      "  \"in %s or %s. Using default version.\" % (data_dir, grid_dir))\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -445,7 +464,7 @@
        "    history:      Created by calling `open_mdsdataset(extra_metadata=None, ll..."
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,11 +476,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-22T05:39:19.101513Z",
-     "start_time": "2020-05-22T05:38:23.243803Z"
+     "end_time": "2020-05-30T07:42:28.240966Z",
+     "start_time": "2020-05-30T07:41:25.076541Z"
     }
    },
    "outputs": [],
@@ -470,6 +489,30 @@
     "YG = lds_grid.YG.isel(face=10).values\n",
     "XC = lds_grid.XC.isel(face=10).values\n",
     "YC = lds_grid.YC.isel(face=10).values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-30T07:45:57.875300Z",
+     "start_time": "2020-05-30T07:45:57.793847Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-128.0 -38.00146\n",
+      "13.756127 72.043434\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.min(XG),np.max(XG))\n",
+    "print(np.min(YG),np.max(YG))"
    ]
   },
   {
