All modules merged into one
Allows inter-module imports, since all of them will belong to the same (parent) module.

--- a/EBC_Spectra_Analysis.ipynb
+++ b/EBC_Spectra_Analysis.ipynb
@@ -70,7 +70,7 @@
    "outputs": [],
    "source": [
     "# Directorio padre\n",
-    "from common_vars.directories import DATA_FOLDER\n",
+    "from spectral_analysis.common_vars.directories import DATA_FOLDER\n",
     "# Directorio de los datos geográficos\n",
     "prnt_map = '{}/by_region'.format(DATA_FOLDER)"
    ]
@@ -115,7 +115,7 @@
     }
    ],
    "source": [
-    "from common_vars.regions import ids_Cal,ids_Can,ids_Peru,ids_Ben\n",
+    "from spectral_analysis.common_vars.regions import ids_Cal,ids_Can,ids_Peru,ids_Ben\n",
     "ids = ids_Cal+ids_Can+ids_Peru+ids_Ben\n",
     "print(ids)\n",
     "print(\"Hay un total de {} espectros\".format(len(ids)))"
