--- a/Get_ECCO_LLC_Data.ipynb
+++ b/Get_ECCO_LLC_Data.ipynb
@@ -54,7 +54,7 @@
    },
    "outputs": [],
    "source": [
-    "from common_vars.directories import MODEL_FOLDER,DATA_FOLDER\n",
+    "from spectral_analysis.common_vars.directories import MODEL_FOLDER,DATA_FOLDER\n",
     "#prnt = '{}/LLC2160'.format(MODEL_FOLDER)\n",
     "prnt = '{}/LLC4320'.format(MODEL_FOLDER)"
    ]
