--- a/Ocean_Spectra_map.ipynb
+++ b/Ocean_Spectra_map.ipynb
@@ -21,13 +21,17 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-04T08:40:01.379674Z",
+     "start_time": "2020-06-04T08:40:00.709371Z"
+    },
     "colab": {},
     "colab_type": "code",
     "id": "G6ThYVGmfTXn"
    },
    "outputs": [],
    "source": [
-    "from common_vars.directories import DATA_FOLDER\n",
+    "from spectral_analysis.common_vars.directories import DATA_FOLDER\n",
     "prnt = '{}/by_region'.format(DATA_FOLDER)\n",
     "#tools_fn = 'spectral_analysis_tools.py'\n",
     "#from shutil import copyfile\n",
