--- a/RMS Ro Timeseries.ipynb
+++ b/RMS Ro Timeseries.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-29T10:03:54.181552Z",
-     "start_time": "2020-05-29T10:03:54.177184Z"
+     "end_time": "2020-06-04T08:35:55.898374Z",
+     "start_time": "2020-06-04T08:35:55.893910Z"
     },
     "init_cell": true
    },
@@ -29,8 +29,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-29T10:03:55.749186Z",
-     "start_time": "2020-05-29T10:03:54.184321Z"
+     "end_time": "2020-06-04T08:35:56.840560Z",
+     "start_time": "2020-06-04T08:35:55.904624Z"
     },
     "init_cell": true
    },
@@ -51,31 +51,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-29T10:03:58.576703Z",
-     "start_time": "2020-05-29T10:03:55.751412Z"
+     "end_time": "2020-06-04T08:46:17.368937Z",
+     "start_time": "2020-06-04T08:46:12.105057Z"
     },
     "init_cell": true
    },
    "outputs": [],
    "source": [
-    "from common_vars.directories import OUT_IMGS_FOLDER\n",
-    "from common_vars.time_slices import idx_t\n",
-    "from common_vars.regions import ids_regions,lats4id\n",
-    "from ro_b_workflow.output import uv4idt,UV4id,VorticityGrid\n",
-    "from spectral_analysis.tools.plot_utils import savefig\n",
+    "from spectral_analysis.common_vars.directories import OUT_IMGS_FOLDER\n",
+    "from spectral_analysis.common_vars.time_slices import idx_t\n",
+    "from spectral_analysis.common_vars.regions import ids_regions,lats4id\n",
+    "from spectral_analysis.ro_b_workflow.output import uv4idt,UV4id,VorticityGrid\n",
     "import spectral_analysis.tools.gif as gif"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-29T10:03:58.585498Z",
-     "start_time": "2020-05-29T10:03:58.580892Z"
+     "end_time": "2020-06-04T08:35:56.957594Z",
+     "start_time": "2020-06-04T08:35:55.832Z"
     },
     "init_cell": true
    },
@@ -155,11 +154,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-29T10:03:58.608332Z",
-     "start_time": "2020-05-29T10:03:58.589010Z"
+     "end_time": "2020-06-04T08:35:56.958479Z",
+     "start_time": "2020-06-04T08:35:55.839Z"
     },
     "code_folding": [],
     "init_cell": true
@@ -267,11 +266,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-29T10:03:58.616961Z",
-     "start_time": "2020-05-29T10:03:58.610507Z"
+     "end_time": "2020-06-04T08:35:56.959230Z",
+     "start_time": "2020-06-04T08:35:55.842Z"
     },
     "init_cell": true
    },
@@ -295,11 +294,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-29T10:03:58.637241Z",
-     "start_time": "2020-05-29T10:03:58.619144Z"
+     "end_time": "2020-06-04T08:35:56.960067Z",
+     "start_time": "2020-06-04T08:35:55.844Z"
     },
     "code_folding": [],
     "init_cell": true
@@ -832,11 +831,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-29T10:03:58.653405Z",
-     "start_time": "2020-05-29T10:03:58.639302Z"
+     "end_time": "2020-06-04T08:35:56.960961Z",
+     "start_time": "2020-06-04T08:35:55.846Z"
     },
     "init_cell": true
    },
@@ -999,16 +998,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-28T22:55:46.076507Z",
-     "start_time": "2020-05-28T22:55:46.072697Z"
+     "end_time": "2020-06-04T08:54:26.648402Z",
+     "start_time": "2020-06-04T08:54:26.644135Z"
     }
    },
    "outputs": [],
    "source": [
-    "from common_vars.directories import MODEL_FOLDER,DATA_FOLDER\n",
+    "from spectral_analysis.common_vars.directories import MODEL_FOLDER,DATA_FOLDER\n",
     "grid_path = \"{}/LLC4320/grid/\".format(MODEL_FOLDER)"
    ]
   },
