--- a/Test - Ensenada U-V.ipynb
+++ b/Test - Ensenada U-V.ipynb
@@ -20,13 +20,14 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T07:26:38.329617Z",
-     "start_time": "2020-05-04T07:26:38.322031Z"
+     "end_time": "2020-06-04T08:55:08.183596Z",
+     "start_time": "2020-06-04T08:55:08.172444Z"
     }
    },
    "outputs": [],
    "source": [
-    "from common_vars.directories import LUIGI_OUT_FOLDER\n",
+    "#from spectral_analysis.common_vars.directories import LUIGI_OUT_FOLDER\n",
+    "from spectral_analysis.ro_b_workflow.output import LUIGI_OUT_FOLDER\n",
     "fname_fmt_ = LUIGI_OUT_FOLDER+\"/Datasets_compressed/0/days/{}0_{:05d}.npz\"\n",
     "fname_lon = LUIGI_OUT_FOLDER+\"/Datasets_compressed/0/days/lon.txt\"\n",
     "fname_lat = LUIGI_OUT_FOLDER+\"/Datasets_compressed/0/days/lat.txt\""
