--- a/OSM Poster.ipynb
+++ b/OSM Poster.ipynb
@@ -22,8 +22,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-28T18:41:23.660029Z",
-     "start_time": "2020-05-28T18:41:23.654062Z"
+     "end_time": "2020-06-04T08:35:24.105116Z",
+     "start_time": "2020-06-04T08:35:24.100465Z"
     },
     "init_cell": true
    },
@@ -39,8 +39,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-28T18:41:24.348990Z",
-     "start_time": "2020-05-28T18:41:23.664537Z"
+     "end_time": "2020-06-04T08:35:24.415996Z",
+     "start_time": "2020-06-04T08:35:24.107701Z"
     },
     "init_cell": true
    },
@@ -54,22 +54,37 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-28T18:42:41.325800Z",
-     "start_time": "2020-05-28T18:42:31.874110Z"
+     "end_time": "2020-06-04T08:43:12.517541Z",
+     "start_time": "2020-06-04T08:40:26.595257Z"
     }
    },
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'spectral_analysis.preprocess.common_vars'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-b648f66a99fb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mreload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mspectral_analysis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# to be replaced by spectral_analysis/tools/llc4320_utils\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mspectral_analysis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtools\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mllc4320_utils\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mreload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mllc4320_utils\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/jupyter/spectral_analysis/tools/llc4320_utils.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mxmitgcm\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mllcreader\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mopen_mdsdataset\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m#\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpreprocess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcommon_vars\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mMODEL_FOLDER\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;31m## Importing model data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'spectral_analysis.preprocess.common_vars'"
-     ]
+     "data": {
+      "text/plain": [
+       "<xarray.Dataset>\n",
+       "Dimensions:  (face: 13, i: 4320, i_g: 4320, j: 4320, j_g: 4320, k: 90, k_l: 90, k_p1: 90, k_u: 90, time: 377)\n",
+       "Coordinates:\n",
+       "  * face     (face) int64 0 1 2 3 4 5 6 7 8 9 10 11 12\n",
+       "  * i        (i) int64 0 1 2 3 4 5 6 7 ... 4313 4314 4315 4316 4317 4318 4319\n",
+       "  * i_g      (i_g) int64 0 1 2 3 4 5 6 7 ... 4313 4314 4315 4316 4317 4318 4319\n",
+       "  * j        (j) int64 0 1 2 3 4 5 6 7 ... 4313 4314 4315 4316 4317 4318 4319\n",
+       "  * j_g      (j_g) int64 0 1 2 3 4 5 6 7 ... 4313 4314 4315 4316 4317 4318 4319\n",
+       "  * k        (k) int64 0 1 2 3 4 5 6 7 8 9 10 ... 80 81 82 83 84 85 86 87 88 89\n",
+       "  * k_u      (k_u) int64 0 1 2 3 4 5 6 7 8 9 ... 80 81 82 83 84 85 86 87 88 89\n",
+       "  * k_l      (k_l) int64 0 1 2 3 4 5 6 7 8 9 ... 80 81 82 83 84 85 86 87 88 89\n",
+       "  * k_p1     (k_p1) int64 0 1 2 3 4 5 6 7 8 9 ... 80 81 82 83 84 85 86 87 88 89\n",
+       "    niter    (time) int64 ...\n",
+       "  * time     (time) datetime64[ns] 2011-09-13 2011-09-14 ... 2012-09-23\n",
+       "Data variables:\n",
+       "    U        (time, k, face, j, i_g) >f4 dask.array<chunksize=(1, 1, 3, 4320, 4320), meta=np.ndarray>\n",
+       "    V        (time, k, face, j_g, i) >f4 dask.array<chunksize=(1, 1, 3, 4320, 4320), meta=np.ndarray>\n",
+       "    Theta    (time, k, face, j, i) >f4 dask.array<chunksize=(1, 1, 3, 4320, 4320), meta=np.ndarray>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -152,8 +167,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-28T18:47:44.467483Z",
-     "start_time": "2020-05-28T18:47:28.584195Z"
+     "end_time": "2020-06-04T08:50:58.557140Z",
+     "start_time": "2020-06-04T08:50:58.530245Z"
     }
    },
    "outputs": [],
@@ -167,7 +182,7 @@
     "from spectral_analysis.tools.spectral_analysis_tools import plot_wk_forseasonvarid as plot_wk\n",
     "\n",
     "# Directorio padre\n",
-    "from common_vars.directories import DATA_FOLDER\n",
+    "from spectral_analysis.common_vars.directories import DATA_FOLDER\n",
     "# Directorio de los datos geográficos\n",
     "prnt_map = '{}/by_region'.format(DATA_FOLDER)"
    ]
