Renamed Luigi_download module

--- a/RMS Ro Timeseries.ipynb
+++ b/RMS Ro Timeseries.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T08:35:55.898374Z",
-     "start_time": "2020-06-04T08:35:55.893910Z"
+     "end_time": "2020-06-04T09:06:15.486234Z",
+     "start_time": "2020-06-04T09:06:15.483971Z"
     },
     "init_cell": true
    },
@@ -26,11 +26,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T08:35:56.840560Z",
-     "start_time": "2020-06-04T08:35:55.904624Z"
+     "end_time": "2020-06-04T09:06:15.490442Z",
+     "start_time": "2020-06-04T09:06:15.487511Z"
     },
     "init_cell": true
    },
@@ -51,11 +51,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T08:46:17.368937Z",
-     "start_time": "2020-06-04T08:46:12.105057Z"
+     "end_time": "2020-06-04T09:06:15.494400Z",
+     "start_time": "2020-06-04T09:06:15.491780Z"
     },
     "init_cell": true
    },
@@ -64,17 +64,17 @@
     "from spectral_analysis.common_vars.directories import OUT_IMGS_FOLDER\n",
     "from spectral_analysis.common_vars.time_slices import idx_t\n",
     "from spectral_analysis.common_vars.regions import ids_regions,lats4id\n",
-    "from spectral_analysis.ro_b_workflow.output import uv4idt,UV4id,VorticityGrid\n",
+    "from spectral_analysis.luigi_workflows.output import uv4idt,UV4id,VorticityGrid\n",
     "import spectral_analysis.tools.gif as gif"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T08:35:56.957594Z",
-     "start_time": "2020-06-04T08:35:55.832Z"
+     "end_time": "2020-06-04T09:06:15.498735Z",
+     "start_time": "2020-06-04T09:06:15.495787Z"
     },
     "init_cell": true
    },
@@ -154,11 +154,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T08:35:56.958479Z",
-     "start_time": "2020-06-04T08:35:55.839Z"
+     "end_time": "2020-06-04T09:06:15.510642Z",
+     "start_time": "2020-06-04T09:06:15.500123Z"
     },
     "code_folding": [],
     "init_cell": true
@@ -266,11 +266,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T08:35:56.959230Z",
-     "start_time": "2020-06-04T08:35:55.842Z"
+     "end_time": "2020-06-04T09:06:15.516767Z",
+     "start_time": "2020-06-04T09:06:15.512091Z"
     },
     "init_cell": true
    },
@@ -294,11 +294,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T08:35:56.960067Z",
-     "start_time": "2020-06-04T08:35:55.844Z"
+     "end_time": "2020-06-04T09:06:15.531862Z",
+     "start_time": "2020-06-04T09:06:15.518393Z"
     },
     "code_folding": [],
     "init_cell": true
@@ -831,11 +831,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T08:35:56.960961Z",
-     "start_time": "2020-06-04T08:35:55.846Z"
+     "end_time": "2020-06-04T09:06:15.543262Z",
+     "start_time": "2020-06-04T09:06:15.533464Z"
     },
     "init_cell": true
    },
