Feat: Add Cospectra notebook

--- a/Get_ECCO_LLC_Data.ipynb
+++ b/Get_ECCO_LLC_Data.ipynb
@@ -3093,9 +3093,9 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "LLC",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "llc"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3107,7 +3107,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.9"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -3158,5 +3158,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
