Feat: Add coherence

--- a/RMS Ro Timeseries.ipynb
+++ b/RMS Ro Timeseries.ipynb
@@ -382,8 +382,7 @@
     "ExecuteTime": {
      "end_time": "2020-06-05T01:59:10.549292Z",
      "start_time": "2020-06-05T01:01:33.445529Z"
-    },
-    "scrolled": false
+    }
    },
    "outputs": [
     {
@@ -1402,9 +1401,9 @@
  "metadata": {
   "celltoolbar": "Initialization Cell",
   "kernelspec": {
-   "display_name": "LLC",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "llc"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1474,5 +1473,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
