--- a/Phase diff.ipynb
+++ b/Phase diff.ipynb
@@ -158,9 +158,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "LLC",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "llc"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
