Download more vars, extended seasons

--- a/Ocean_Spectra_map.ipynb
+++ b/Ocean_Spectra_map.ipynb
@@ -863,9 +863,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "LLC",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "llc"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -928,5 +928,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
