--- a/Get_ECCO_LLC_Data.ipynb
+++ b/Get_ECCO_LLC_Data.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-22T08:46:23.124288Z",
@@ -20,6 +20,13 @@
     },
     "colab": {},
     "colab_type": "code",
+    "execution": {
+     "iopub.execute_input": "2021-08-18T06:41:59.386900Z",
+     "iopub.status.busy": "2021-08-18T06:41:59.386530Z",
+     "iopub.status.idle": "2021-08-18T06:42:00.266817Z",
+     "shell.execute_reply": "2021-08-18T06:42:00.266048Z",
+     "shell.execute_reply.started": "2021-08-18T06:41:59.386808Z"
+    },
     "id": "NEOEY-bKtHR_"
    },
    "outputs": [],
@@ -49,6 +56,13 @@
      "height": 125
     },
     "colab_type": "code",
+    "execution": {
+     "iopub.execute_input": "2021-08-18T06:42:00.270636Z",
+     "iopub.status.busy": "2021-08-18T06:42:00.270404Z",
+     "iopub.status.idle": "2021-08-18T06:42:00.280389Z",
+     "shell.execute_reply": "2021-08-18T06:42:00.279380Z",
+     "shell.execute_reply.started": "2021-08-18T06:42:00.270609Z"
+    },
     "id": "-7xV8czetZ0z",
     "outputId": "b89e8602-89c5-4886-dda0-2f29a6f3aac4"
    },
@@ -61,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-27T04:49:50.526910Z",
@@ -69,6 +83,13 @@
     },
     "colab": {},
     "colab_type": "code",
+    "execution": {
+     "iopub.execute_input": "2021-08-18T06:42:00.282053Z",
+     "iopub.status.busy": "2021-08-18T06:42:00.281822Z",
+     "iopub.status.idle": "2021-08-18T06:42:00.286032Z",
+     "shell.execute_reply": "2021-08-18T06:42:00.285307Z",
+     "shell.execute_reply.started": "2021-08-18T06:42:00.282024Z"
+    },
     "id": "k2vHqo80u_tn"
    },
    "outputs": [],
@@ -87,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-27T04:49:51.471719Z",
@@ -98,17 +119,32 @@
      "height": 34
     },
     "colab_type": "code",
+    "execution": {
+     "iopub.execute_input": "2021-08-18T06:42:01.208078Z",
+     "iopub.status.busy": "2021-08-18T06:42:01.207722Z",
+     "iopub.status.idle": "2021-08-18T06:42:01.248317Z",
+     "shell.execute_reply": "2021-08-18T06:42:01.247316Z",
+     "shell.execute_reply.started": "2021-08-18T06:42:01.208008Z"
+    },
     "id": "V7h7lcV_voqc",
     "outputId": "91c71f78-08fe-457f-912a-63725890d05f"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Folder already exists -- Creation skipped\n"
+     ]
+    }
+   ],
    "source": [
     "mkdir_(prnt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-27T04:49:51.484093Z",
@@ -116,6 +152,13 @@
     },
     "colab": {},
     "colab_type": "code",
+    "execution": {
+     "iopub.execute_input": "2021-08-18T06:42:02.539536Z",
+     "iopub.status.busy": "2021-08-18T06:42:02.539230Z",
+     "iopub.status.idle": "2021-08-18T06:42:02.545530Z",
+     "shell.execute_reply": "2021-08-18T06:42:02.544684Z",
+     "shell.execute_reply.started": "2021-08-18T06:42:02.539491Z"
+    },
     "id": "5bt57rZOz1Kf"
    },
    "outputs": [],
@@ -140,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-27T04:49:51.775375Z",
@@ -148,6 +191,13 @@
     },
     "colab": {},
     "colab_type": "code",
+    "execution": {
+     "iopub.execute_input": "2021-08-18T06:42:03.286572Z",
+     "iopub.status.busy": "2021-08-18T06:42:03.286269Z",
+     "iopub.status.idle": "2021-08-18T06:42:03.707760Z",
+     "shell.execute_reply": "2021-08-18T06:42:03.706973Z",
+     "shell.execute_reply.started": "2021-08-18T06:42:03.286517Z"
+    },
     "id": "AtMhpo51wqRS"
    },
    "outputs": [],
@@ -283,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-27T07:30:22.094981Z",
@@ -291,6 +341,13 @@
     },
     "colab": {},
     "colab_type": "code",
+    "execution": {
+     "iopub.execute_input": "2021-08-18T06:42:11.047916Z",
+     "iopub.status.busy": "2021-08-18T06:42:11.047623Z",
+     "iopub.status.idle": "2021-08-18T06:42:11.054646Z",
+     "shell.execute_reply": "2021-08-18T06:42:11.053745Z",
+     "shell.execute_reply.started": "2021-08-18T06:42:11.047885Z"
+    },
     "id": "0TOuf6EZ-Vk2"
    },
    "outputs": [],
@@ -1019,13 +1076,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "start_time": "2020-04-27T07:30:55.181Z"
     },
     "colab": {},
     "colab_type": "code",
+    "execution": {
+     "iopub.execute_input": "2021-08-18T06:42:32.764147Z",
+     "iopub.status.busy": "2021-08-18T06:42:32.763839Z",
+     "iopub.status.idle": "2021-08-18T06:42:34.162736Z",
+     "shell.execute_reply": "2021-08-18T06:42:34.161928Z",
+     "shell.execute_reply.started": "2021-08-18T06:42:32.764103Z"
+    },
     "id": "l6fBR7Lc7DUZ"
    },
    "outputs": [],
@@ -1039,13 +1103,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "start_time": "2020-04-27T04:49:50.529Z"
     },
     "colab": {},
     "colab_type": "code",
+    "execution": {
+     "iopub.execute_input": "2021-08-18T06:42:34.843735Z",
+     "iopub.status.busy": "2021-08-18T06:42:34.843420Z",
+     "iopub.status.idle": "2021-08-18T06:42:34.848344Z",
+     "shell.execute_reply": "2021-08-18T06:42:34.847339Z",
+     "shell.execute_reply.started": "2021-08-18T06:42:34.843690Z"
+    },
     "id": "qUEAFMcccBy6"
    },
    "outputs": [],
@@ -1055,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "start_time": "2020-04-27T04:49:50.533Z"
@@ -1065,10 +1136,39 @@
      "height": 281
     },
     "colab_type": "code",
+    "execution": {
+     "iopub.execute_input": "2021-08-18T06:42:35.212865Z",
+     "iopub.status.busy": "2021-08-18T06:42:35.212534Z",
+     "iopub.status.idle": "2021-08-18T06:42:35.356163Z",
+     "shell.execute_reply": "2021-08-18T06:42:35.354722Z",
+     "shell.execute_reply.started": "2021-08-18T06:42:35.212821Z"
+    },
     "id": "gadvOhBhixna",
     "outputId": "4e1128f1-b5d9-4048-89b2-9de83e961493"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/mnt/disks/LLC4320/GDriveBackup/Tesis/data/model/LLC4320/U_240x577x85.20110913T000000.data'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-411ccc840dc4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0mfname_V\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"V_240x577x85.20110913T{:06d}.data\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;31m#print(fname_V)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m     \u001b[0mU\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmemmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"{}/{}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprnt\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mfname_U\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'r'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'float32'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdata_shape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m     \u001b[0;31m#V = np.memmap(\"{}/{}\".format(prnt,fname_V),mode='r',dtype='float32',shape=data_shape)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0;31m#UV = np.sqrt(np.square(U) + np.square(V))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/thesis/lib/python3.7/site-packages/numpy/core/memmap.py\u001b[0m in \u001b[0;36m__new__\u001b[0;34m(subtype, filename, dtype, mode, offset, shape, order)\u001b[0m\n\u001b[1;32m    223\u001b[0m             \u001b[0mf_ctx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcontextlib_nullcontext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    224\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 225\u001b[0;31m             \u001b[0mf_ctx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos_fspath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m'r'\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mmode\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'c'\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m'b'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    226\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    227\u001b[0m         \u001b[0;32mwith\u001b[0m \u001b[0mf_ctx\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mfid\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/mnt/disks/LLC4320/GDriveBackup/Tesis/data/model/LLC4320/U_240x577x85.20110913T000000.data'"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#ds_V = np.memmap(\"{}/{}\".format(prnt,\"V_tmp\"),mode='w+',dtype=\"float32\",shape=(240,577,20))\n",
     "\n",
@@ -1127,16 +1227,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "start_time": "2020-04-27T04:49:50.550Z"
     },
     "colab": {},
     "colab_type": "code",
+    "execution": {
+     "iopub.execute_input": "2021-08-18T06:42:44.724197Z",
+     "iopub.status.busy": "2021-08-18T06:42:44.723890Z",
+     "iopub.status.idle": "2021-08-18T06:42:44.763341Z",
+     "shell.execute_reply": "2021-08-18T06:42:44.762174Z",
+     "shell.execute_reply.started": "2021-08-18T06:42:44.724156Z"
+    },
     "id": "DbrNNMhzzE-m"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "CalledProcessError",
+     "evalue": "Command 'b'import dask,xmitgcm,numpy\\nprint(dask.__version__)\\nprint(xmitgcm.__version__)\\nprint(numpy.__version__)\\n'' returned non-zero exit status 1.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mCalledProcessError\u001b[0m                        Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-515a1fd21c9f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_cell_magic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'script'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'false'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'import dask,xmitgcm,numpy\\nprint(dask.__version__)\\nprint(xmitgcm.__version__)\\nprint(numpy.__version__)\\n'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/anaconda3/envs/thesis/lib/python3.7/site-packages/IPython/core/interactiveshell.py\u001b[0m in \u001b[0;36mrun_cell_magic\u001b[0;34m(self, magic_name, line, cell)\u001b[0m\n\u001b[1;32m   2379\u001b[0m             \u001b[0;32mwith\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbuiltin_trap\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2380\u001b[0m                 \u001b[0margs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mmagic_arg_s\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcell\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2381\u001b[0;31m                 \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2382\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2383\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<decorator-gen-103>\u001b[0m in \u001b[0;36mshebang\u001b[0;34m(self, line, cell)\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/thesis/lib/python3.7/site-packages/IPython/core/magic.py\u001b[0m in \u001b[0;36m<lambda>\u001b[0;34m(f, *a, **k)\u001b[0m\n\u001b[1;32m    185\u001b[0m     \u001b[0;31m# but it's overkill for just that one bit of state.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    186\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mmagic_deco\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 187\u001b[0;31m         \u001b[0mcall\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mlambda\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    188\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    189\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mcallable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/thesis/lib/python3.7/site-packages/IPython/core/magics/script.py\u001b[0m in \u001b[0;36mshebang\u001b[0;34m(self, line, cell)\u001b[0m\n\u001b[1;32m    243\u001b[0m             \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstderr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflush\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    244\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mraise_error\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreturncode\u001b[0m\u001b[0;34m!=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 245\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mCalledProcessError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreturncode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcell\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutput\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstderr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0merr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    246\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    247\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_run_script\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcell\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mto_close\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mCalledProcessError\u001b[0m: Command 'b'import dask,xmitgcm,numpy\\nprint(dask.__version__)\\nprint(xmitgcm.__version__)\\nprint(numpy.__version__)\\n'' returned non-zero exit status 1."
+     ]
+    }
+   ],
    "source": [
     "%%script false\n",
     "import dask,xmitgcm,numpy\n",
@@ -1147,13 +1270,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
      "start_time": "2020-04-27T07:31:13.125Z"
     },
     "colab": {},
     "colab_type": "code",
+    "execution": {
+     "iopub.execute_input": "2021-08-18T06:42:51.045545Z",
+     "iopub.status.busy": "2021-08-18T06:42:51.045084Z",
+     "iopub.status.idle": "2021-08-18T06:42:51.048819Z",
+     "shell.execute_reply": "2021-08-18T06:42:51.048208Z",
+     "shell.execute_reply.started": "2021-08-18T06:42:51.045508Z"
+    },
     "id": "Jh3vdEX1lCE4"
    },
    "outputs": [],
@@ -1163,7 +1293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
      "start_time": "2020-04-27T07:31:13.497Z"
@@ -1173,10 +1303,47 @@
      "height": 372
     },
     "colab_type": "code",
+    "execution": {
+     "iopub.execute_input": "2021-08-18T06:42:51.403765Z",
+     "iopub.status.busy": "2021-08-18T06:42:51.403480Z",
+     "iopub.status.idle": "2021-08-18T06:42:52.587008Z",
+     "shell.execute_reply": "2021-08-18T06:42:52.585929Z",
+     "shell.execute_reply.started": "2021-08-18T06:42:51.403734Z"
+    },
     "id": "imLn3iOd2bIk",
     "outputId": "91109ac7-8500-4b13-9b47-45bbf9a048e7"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Eta',\n",
+       " 'KPPhbl',\n",
+       " 'oceFWflx',\n",
+       " 'oceQnet',\n",
+       " 'oceQsw',\n",
+       " 'oceSflux',\n",
+       " 'oceTAUX',\n",
+       " 'oceTAUY',\n",
+       " 'PhiBot',\n",
+       " 'Salt',\n",
+       " 'SIarea',\n",
+       " 'SIheff',\n",
+       " 'SIhsalt',\n",
+       " 'SIhsnow',\n",
+       " 'SIuice',\n",
+       " 'SIvice',\n",
+       " 'Theta',\n",
+       " 'U',\n",
+       " 'V',\n",
+       " 'W']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import geopandas as gpd\n",
@@ -3107,7 +3274,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.9"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
